--- a/frontend/gamifipy/src/view/LevelView/LevelView.css
+++ b/frontend/gamifipy/src/view/LevelView/LevelView.css
@@ -12,3 +12,19 @@
     text-align: center;
     max-width: 1000px;
 }
+
+@media (max-width: 600px) {
+    .levelView-Container {
+        padding: 3rem 2rem 0 2rem;
+    }
+
+    .levelView-Header-title {
+        margin-top: 2rem;
+        font-size: 1rem;
+    }
+
+    .levelView-Heder-Description {
+        margin: 2rem auto 2rem auto;
+        max-width: 350px;
+    }
+}
